- Fixed bug with Auchenai Crypts: Everything Will Be Alright (Horde version).
- Fixed bug with Molten Core: A Binding Contract. Also affected "The Molten Core".
- Fixed a few typos here and there, some Prequest icons were not showing up.
- Added 'Story' for Doomwalker and Highlord Kruul. No quests.
- Updated 'Story' for Doom Lord Kazzak and Eye of the Storm. No quests.

- Quests added:
	- Molten Core: The Ancient Leaf
	- Onyxia's Lair: Victory for the Alliance
	- Onyxia's Lair: Victory for the Horde
	- Shattered Halls: Kalynna's Request
	- Sethekk Halls: Kalynna's Request
	- Sethekk Halls: Vanquish the Raven God (Druid epic flightform)
	- Zul'Aman: X Marks... Your Doom!
	- Zul'Aman: Hex Lord? Hah!
	- Zul'Aman: Tuskin' Raiders
	- Zul'Aman: A Troll Among Trolls
	- Zul'Aman: Playin' With Dolls
	- Zul'Aman: Blood of the Warlord
	- Zul'Aman: Undercover Sister
	- Dragons of Nightmare: Shrouded in Nightmare
	- Azuregos: Ancient Sinew Wrapped Lamina
	- Zul'Gurub: The Perfect Poison  (from Celellach)
	- Ruins of Ahn'Qiraj: The Perfect Poison  (from Celellach)
	- Dire Maul West: The Emerald Dream... (Druid)  (from Celellach)
	- Dire Maul West: The Greatest Race of Hunters (Hunter)  (from Celellach)
	- Dire Maul West: The Arcanist's Cookbook (Mage)  (from Celellach)
	- Dire Maul West: The Light and How To Swing It (Paladin)  (from Celellach)
	- Dire Maul West: Holy Bologna: What the Light Won't Tell You (Priest)  (from Celellach)
	- Dire Maul West: Garona: A Study on Stealth and Treachery (Rogue)  (from Celellach)
	- Dire Maul West: Frost Shock and You (Shaman)  (from Celellach)
	- Dire Maul West: Harnessing Shadows (Warlock)  (from Celellach)
	- Dire Maul West: Codex of Defense (Warrior)  (from Celellach)
	- Dire Maul West: Libram of Focus  (from Celellach)
	- Dire Maul West: Libram of Protection  (from Celellach)
	- Dire Maul West: Libram of Rapidity  (from Celellach)
	- Dire Maul West: Foror's Compendium  (from Celellach)
	
- Cleanup progress (DONE!):