@@ -2,6 +2,44 @@ Just some templates I can quickly copy/paste.
 
 
 
+===============================================================================
+
+HEROIC DAILY templates:
+
+--Quest 3 Alliance
+Inst37Quest3 = "3.  (Heroic Daily)"
+Inst37Quest3_Level = "70"
+Inst37Quest3_Attain = "70"
+Inst37Quest3_Aim = ""
+Inst37Quest3_Location = "Wind Trader Zhareem (Shattrath City - Lower City; "..YELLOW.."74,35"..WHITE..")"
+Inst37Quest3_Note = "This quest can only be completed on Heroic difficulty and is one a daily quest.\n\nNazan is at "..YELLOW.."[3]"..WHITE.."."
+Inst37Quest3_Prequest = "No"
+Inst37Quest3_Folgequest = "No"
+--
+Inst37Quest3name1 = "Badge of Justice"
+
+
+
+Inst39Quest9_Location = "Nether-Stalker Mah'duun (Shattrath City - Lower City; "..YELLOW.."74,35"..WHITE..")"
+
+
+
+--Quest 3 Horde  (same as Quest 3 Alliance)
+Inst38Quest3_HORDE = Inst38Quest3
+Inst38Quest3_HORDE_Level = Inst38Quest3_Level
+Inst38Quest3_HORDE_Attain = Inst38Quest3_Attain
+Inst38Quest3_HORDE_Aim = Inst38Quest3_Aim
+Inst38Quest3_HORDE_Location = Inst38Quest3_Location
+Inst38Quest3_HORDE_Note = Inst38Quest3_Note
+Inst38Quest3_HORDE_Prequest = Inst38Quest3_Prequest
+Inst38Quest3_HORDE_Folgequest = Inst38Quest3_Folgequest
+--
+Inst38Quest3name1_HORDE = Inst38Quest3name1
+
+
+===============================================================================
+
+
 --Quest 1 Alliance
 Inst61Quest1 = ""
 Inst61Quest1_Level = ""
